--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,14 +1,10 @@
+<p>
 <% @categories.each do |category| %>
-  <%= link_to category.title, category_path(category) %>
+  <%= link_to category.title, category_path(category) %> |
 <% end %>
+</p>
 
 
 <% @items.each do |item| %>
-  <p><%= item.title %> | $<%= item.price.to_f/100 %> | </p>
-  <% if user_signed_in? %>
-    <%= form_tag line_items_path(item_id: item) do %>
-      <%= hidden_field_tag 'item_id', item.id %>
-      <%= submit_tag "Add to Cart" %>
-    <% end %>
-  <% end %>
+  <p><%= item.title %> | <%= number_to_currency(item.price/100) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item.id) if logged_in? %></p>
 <% end %>
